# deep-research

./: .gitignore  CLAUDE.md  CLEANUP_CONSOLIDATED.md  CLEANUP_DESLOP.md  CLEANUP_KITARU.md  CLEANUP_PYDANTIC_AI.md  CLEANUP_REVIEW.md  CLEANUP_SIMPLIFY.md  README.md  pyproject.toml  run.py  run_v2.py
.claude/: settings.local.json
.kitaru/: config.yaml
artifacts/evals/: baseline-20260410-111250Z.json
deep_research/: __init__.py  agent_io.py  config.py  enums.py  models.py  observability.py
deep_research/agents/: _kitaru.py  aggregator.py  claim_extractor.py  classifier.py  coverage_scorer.py  curator.py  judge.py  planner.py  relevance_scorer.py  replanner.py  reviewer.py  supervisor.py  writer.py
deep_research/checkpoints/: assemble.py  classify.py  coherence.py  (+17 more)
docs/: architecture.md  flow.md
evals/: __init__.py  loader.py  logfire.py  peval.py  runner.py  settings.py
research/: __init__.py
tests/: _runtime_kitaru_probe.py  test_agent_behavior.py  test_agent_factories.py  test_agent_io.py  test_budget.py  test_checkpoints.py  test_config.py  test_contracts.py  test_convergence.py  test_costing.py  test_council.py  test_coverage_scorer_agent.py  test_eval_harness_foundation.py  test_eval_logfire.py  test_evidence_pipeline.py  test_feedback_loop.py  test_fetch_content.py  test_imports.py  test_mcp_config.py  test_models.py  test_observability.py  test_operator_contract.py  test_package_io.py  test_prompts.py  test_provider_surface.py  test_providers_search.py  test_renderers.py  test_renderers_llm.py  test_research_flow_integration.py  test_research_flow_unit.py  test_tools.py  test_v2_agents.py  test_v2_checkpoints.py  test_v2_config.py  test_v2_convergence.py  test_v2_council.py  test_v2_flow.py  test_v2_imports.py  test_v2_integration.py  test_v2_invariants.py  (+6 more)
(+163 files in other folders)
