[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-research"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "kitaru",
  "pydantic>=2",
  "pydantic-ai",
  "pydantic-settings",
  "httpx>=0.27",
  "arxiv>=2.1.3",
]

[tool.setuptools.packages.find]
include = ["deep_research*"]

[tool.setuptools.package-data]
"deep_research.prompts" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
