[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-research"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "kitaru",
  "pydantic>=2",
  "pydantic-ai>=1.75",
  "logfire",
  "pydantic-settings",
  "httpx>=0.27",
  "arxiv>=2.1.3",
]

[project.optional-dependencies]
evals = [
  "pydantic-evals[logfire]",
]
dev = [
  "pytest-timeout",
]

[tool.setuptools.packages.find]
include = ["research*", "deep_research*"]

[tool.setuptools.package-data]
"deep_research.prompts" = ["*.md"]
"research.prompts" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60

[tool.uv.workspace]
members = [
    "deep-research",
]

[tool.uv.sources]
kitaru = { path = "../../../kitaru/kitaru", editable = true }

[tool.uv]
override-dependencies = [
  "opentelemetry-sdk>=1.39.0",
]
